== Changelog ==
= 1.1.9 =
* Add sections navigation.
* Fix feature items does not display full width under 991px.
* Fix parallax issue on mobile.

= 1.1.8 =
* Add WooCommerce support.

= 1.1.7 =
 * Support Retina Logo.
 * Add more option no sidebar for layout settings.
 * Add copy theme settings form parent theme to child theme.

= 1.1.6 =
 * Support WooCommerce Plugin.

= 1.1.5 =
* Fix issue sometime can not load video lightbox style.

= 1.1.4 =
* Update parallax.
* Add images loaded for gallery.
* Fix site title & tagline is hidden when use logo.
* Remove Magnific Popup, use light gallery instead.
* Remove theme built-in custom css.


= 1.1.3 =
* WP 4.7 compatible.
* Support WP 4.7 customizer shortcut.
* Update option to disable slider.

= 1.1.2 =
* Improve customizer js.
* Visual editor show textarea instead when use disable visual editor.
* Update validate data.
* Cannot scroll down on navigation bar.
* Adding translation capabilities.


= 1.1.1 =
* Improve admin panel.
* Add gallery section.

= 1.1.0 =
* Left sidebar layout option.
* More footer styling options.
* Demo data welcome message.
* Remove hero grab cursor

= 1.0.9 =
* Remove wrong fonts call.
* Update site footer layout.
* Add business footer widget style.
* Improve hero section text.
* Fixed footer columns customizer issue.
* Add primary color settings.
* Add custom css options.

= 1.0.8 =
* Improve 404 page.
* Add Full-Width page template.
* Support for RTL language.
* Improve section default style.
* Improve site info layout.

= 1.0.7 =
* Initial release