@@ -1,6 +1,7 @@
 == Changelog ==
 = 1.1.9 =
 * Add sections navigation.
+* Add category selection in section News.
 * Fix feature items does not display full width under 991px.
 * Fix parallax issue on mobile.
 
